<resources>
    <string name="app_name">LawnCare</string>

    <!--Toast messages-->
    <string name="empty_details">Please enter your details</string>
    <string name="wrong_user">User does not exist</string>
    <string name="wrong_password">Password is incorrect</string>
    <string name="dev_day_invalid">Delivery day is fully booked please try another day</string>
    <string name="pic_day_invalid">Pickup day is fully booked please try another day</string>
    <string name="dev_time_invalid">Delivery time is booked please try another time</string>
    <string name="pic_time_invalid">Pickup time is booked please try another time</string>
    <string name="date_invalid">Pickup must be after delivery</string>
    <string name="date_available">Dates are available for booking</string>
    <string name="prior_delivery">Prior delivery already exist</string>

    <!--Login-->
    <string name="username">Enter Username</string>
    <string name="password">Enter Password</string>
    <string name="login">Login</string>
    <string name="title">LawnCare</string>
    <string name="anglicare_logo">Anglicare Logo</string>
    <string name="subtitle">By Anglicare</string>

    <!--Home-->
    <string name="schedule_delivery">Schedule Delivery</string>
    <string name="help">Help</string>
    <string name="next_delivery">Next Delivery:&#160;</string>
    <string name="next_pickup">Next Pickup:&#160;</string>

    <!--Delivery-->
    <string name="delivery_date">Delivery Date</string>
    <string name="pickup_date">Pickup Date</string>
    <string name="check_availability">Check Availability</string>
    <string name="request_delivery">Request Delivery</string>
    <string name="preview">Preview</string>

    <!--Admin-->
    <string name="time">Time</string>
    <string name="address">Address</string>
    <string name="type">Type</string>


    <!--Arrays -->
    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>
    <string-array name="hours">
        <item>10 AM</item>
        <item>11 AM</item>
        <item>12 PM</item>
        <item>1 PM</item>
        <item>2 PM</item>
        <item>3 PM</item>
        <item>4 PM</item>
        <item>5 PM</item>
    </string-array>
</resources>
